Fixed non truncatable titles on menu popovers

--- a/assets/scss/molecules/_menu-popover.scss
+++ b/assets/scss/molecules/_menu-popover.scss
@@ -17,6 +17,7 @@
 				color: $blue-dark;
 				line-height: 1;
 				max-width: 150px;
+				display: inline-block;
 				@include text-overflow;
 			}
 		}
